# SFML-Math

./: README.md
SFML/: Math.h  Math.hpp
SFML/Math/: Arithmetic.hpp  ArithmeticMacro.hpp  StreamOutput.hpp  Traits.h  TraitsImpl.h  VectorArithmetic.hpp
include/SFML/: Math.hpp
include/SFML/Math/: Algebra.hpp  ArithmeticMacro.inl  ToString.hpp  Utility.hpp  UtilityMacro.inl
test/: CMakeLists.txt  algebra_overloads.cpp  do_not_conflict.cpp  mixed_types.cpp  to_string.cpp
